# weather-tty

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: demo.tape  gen_demo.py
src/weather_tty/: __init__.py  _richfix.py  api.py  cli.py  formatting.py
tests/: test_api.py  test_api_geocode.py  test_cli.py  test_formatting.py  test_richfix.py
